# rkyv

./: Cargo.toml  TODO.md
rkyv/: Cargo.toml
rkyv/src/: boxed.rs  ffi.rs  lib.rs  rc.rs  rel_ptr.rs  time.rs
rkyv/src/collections/: btree_set.rs  hash_set.rs  index_set.rs  util.rs
rkyv/src/collections/btree_map/: mod.rs  validation.rs
rkyv/src/collections/hash_index/: mod.rs  validation.rs
rkyv/src/collections/hash_map/: mod.rs  validation.rs
rkyv/src/collections/index_map/: mod.rs  validation.rs
rkyv/src/impls/: bitvec.rs  rend.rs
rkyv/src/impls/hashbrown/: hash_map.rs  hash_set.rs
rkyv/src/impls/indexmap/: index_map.rs  index_set.rs
rkyv/src/impls/std/collections/: vec_deque.rs
rkyv/src/ser/serializers/: mod.rs
rkyv/src/string/: mod.rs  repr.rs
rkyv/src/validation/: mod.rs
rkyv/src/validation/validators/: mod.rs  util.rs
rkyv/src/vec/: mod.rs  raw.rs
rkyv/src/with/: mod.rs
rkyv/src/with/impls/: alloc.rs
rkyv_dyn/src/: lib.rs
rkyv_dyn_derive/src/: lib.rs
rkyv_dyn_test/src/: lib.rs
rkyv_test/src/: test_alloc.rs
