[workspace]
members = [
    "examples/as_string",
    "examples/backwards_compat",
    "examples/json",
    "examples/opcode",
    "rkyv",
    "rkyv_derive",
    "rkyv_dyn",
    "rkyv_dyn_derive",
    "rkyv_dyn_test",
    "rkyv_test",
    "rkyv_typename",
    "rkyv_typename_derive",
]
default-members = [
    "rkyv",
    "rkyv_dyn",
    "rkyv_dyn_test",
    "rkyv_test",
    "rkyv_typename",
]

[workspace.package]
version = "0.8.0"
authors = ["David Koloski <djkoloski@gmail.com>"]
edition = "2021"
license = "MIT"
documentation = "https://docs.rs/rkyv"
repository = "https://github.com/rkyv/rkyv"

[workspace.dependencies]
bytecheck = { version = "0.8", default-features = false, git = "https://github.com/rkyv/bytecheck", branch = "0.8" }
hashbrown = "0.12"
proc-macro2 = "1.0"
ptr_meta = { version = "0.3", default-features = false, git = "https://github.com/rkyv/ptr_meta", branch = "master" }
quote = "1.0"
rend = { version = "0.5", default-features = false, git = "https://github.com/rkyv/rend", branch = "master" }
rancor = { version = "0.1", deafult-features = false, git = "https://github.com/rkyv/rancor", branch = "main" }
rkyv = { version = "=0.8.0", path = "rkyv" }
rkyv_derive = { version = "=0.8.0", path = "rkyv_derive" }
seahash = "4.0"
syn = "1.0"
wasm-bindgen-test = "0.3"
